welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:35: error: reassignment to val
			if (estFaceMur) L=L+1
                                         ^